--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
@@ -214,14 +214,14 @@ FROM [Financial]]]>
                 <textFieldExpression><![CDATA[$R{aq.odaNet}]]></textFieldExpression>
             </textField>
             <textField pattern="#,##0.00" isBlankWhenNull="true">
-                <reportElement x="352" y="20" width="100" height="14" uuid="4150ac15-ec14-4e02-86b2-98311846b6bd"/>
+                <reportElement key="extendedAmountYear1" x="352" y="20" width="100" height="14" uuid="4150ac15-ec14-4e02-86b2-98311846b6bd"/>
                 <textElement textAlignment="Right">
                     <font fontName="Arial"/>
                 </textElement>
                 <textFieldExpression><![CDATA[$F{Extended Amount Year 1}.doubleValue()/1000000]]></textFieldExpression>
             </textField>
             <textField pattern="#,##0.00" isBlankWhenNull="true">
-                <reportElement x="455" y="20" width="100" height="14" uuid="c9942bc6-86f5-404f-84db-195b820e9cde"/>
+                <reportElement key="extendedAmountYear2" x="455" y="20" width="100" height="14" uuid="c9942bc6-86f5-404f-84db-195b820e9cde"/>
                 <textElement textAlignment="Right">
                     <font fontName="Arial"/>
                 </textElement>
