--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/application.css
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/application.css
@@ -1,4 +1,12 @@
 /*
+ * Copyright (c) 2014 Development Gateway.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the GNU Public License v3.0
+ * which accompanies this distribution, and is available at
+ * http://www.gnu.org/licenses/gpl.html
+ */
+
+/*
  * Copyright (c) 2013 Development Gateway.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the GNU Public License v3.0
@@ -11,13 +19,13 @@
 
 /*fix selectors in themes*/
 select, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
-    height: 30px;
+/ / height : 30 px;
     /* fix date field margin bottom of 9px*/
-    margin-bottom:5px;
+    margin-bottom: 5px;
 }
 
 /* fix select2 container not having any margin bottom*/
-.select2-container{
+.select2-container {
     margin-bottom: 5px;
 }
 
@@ -25,6 +33,7 @@ select, input[type="text"], input[type="password"], input[type="datetime"], inpu
 .control-label {
     font-weight: bold;
 }
+
 .help-block {
     font-style: italic;
 }
@@ -38,7 +47,7 @@ select, input[type="text"], input[type="password"], input[type="datetime"], inpu
     background-position: 0 0;
     background-color: #003399;
     background-image: linear-gradient(45deg, #003399 0%, #000000 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002f8d', endColorstr='#000000',GradientType=1 );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#002f8d', endColorstr='#000000', GradientType=1);
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2) inset, 0 -3px 7px rgba(0, 0, 0, 0.2) inset;
     color: #FFFFFF;
     padding: 40px 0;
@@ -47,32 +56,32 @@ select, input[type="text"], input[type="password"], input[type="datetime"], inpu
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), 0 0 30px rgba(0, 0, 0, 0.075);
 }
 
-html,body {
-	margin: 0;
-	padding: 0;
-	height: 100%;
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
 #wrapper {
-	min-height: 100%;
-	position: relative;
+    min-height: 100%;
+    position: relative;
 }
 
 #content {
-	padding: 10px;
-	padding-bottom: 90px; /* Height of the footer element */
+    padding: 10px;
+    padding-bottom: 90px; /* Height of the footer element */
 }
 
 #footer {
-	width: 100%;
-	height: 90px;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	font-size: smaller;
-	color: gray;
-	background-color: #F5F5F5;
-	border-top: 1px solid #E5E5E5;
-	padding: 5px 0;
-	text-align: center;
+    width: 100%;
+    height: 90px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-size: smaller;
+    color: gray;
+    background-color: #F5F5F5;
+    border-top: 1px solid #E5E5E5;
+    padding: 5px 0;
+    text-align: center;
 }
