--- a/eudevfin/saiku-webapp/.settings/org.eclipse.wst.common.component
+++ b/eudevfin/saiku-webapp/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,12 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <dependent-module deploy-path="/" handle="module:/overlay/prj/saikuui?includes=**/**&amp;excludes=META-INF/MANIFEST.MF">
+            <dependency-type>consumes</dependency-type>
+        </dependent-module>
+        <dependent-module deploy-path="/" handle="module:/overlay/slf/?includes=**/**&amp;excludes=META-INF/MANIFEST.MF">
+            <dependency-type>consumes</dependency-type>
+        </dependent-module>
         <property name="context-root" value="saiku-webapp"/>
         <property name="java-output-path" value="/saiku-webapp/target/classes"/>
     </wb-module>
