--- a/eudevfin/reports-ui/src/main/webapp/js/style.css
+++ b/eudevfin/reports-ui/src/main/webapp/js/style.css
@@ -112,6 +112,14 @@ img {
     font-size: 12px;
 }
 
+.dataTables_wrapper table td {
+    border-right: 1px solid #ccc;
+}
+
+.dataTables_wrapper table th {
+    border-right: 1px solid #ccc;
+}
+
 .DataTables_sort_wrapper {
 	font-size: 12px;
 	color: #557822;
@@ -165,6 +173,27 @@ td.formattedNumeric {
 }
 
 /************************* Tables *************************/
+
+.dataTables_wrapper {
+    margin-bottom: 0em;
+}
+
+.dataTables_wrapper th {
+    text-align: center;
+}
+
+.dataTables_wrapper td.numeric {
+    text-align: right;
+    font-family: monospace;
+}
+
+.dataTables_wrapper td.string {
+    text-align: left;
+}
+
+.dataTables_wrapper {
+    border: 1px solid #ccc;
+}
 
 .tableComponent {
 	border: 1px solid #ccc;
