--- a/eudevfin/saikuui/.settings/org.eclipse.wst.common.component
+++ b/eudevfin/saikuui/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="saikuui">
+    <wb-module deploy-name="eudevfin-saikuui">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <property name="java-output-path" value="/WEB-INF/classes"/>
-        <property name="context-root" value="saikuui"/>
+        <property name="context-root" value="eudevfin-saikuui"/>
     </wb-module>
 </project-modules>
